updated letter generator + added stuff for the end